--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .viniciussslima-button {
   text-align: center;
   cursor: pointer;
