--- a/src/lib/Menu/style.css
+++ b/src/lib/Menu/style.css
@@ -1,7 +1,9 @@
 .menu-container {
   background-color: #fff;
-  position: absolute;
-  box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25); /* padding: 8px; */
+  position: fixed;
+  box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  padding: 10px;
 }
 
 .menu-container li {
