--- a/src/lib/Drawer/style.css
+++ b/src/lib/Drawer/style.css
@@ -15,6 +15,8 @@
   height: 100%;
   position: relative;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  padding: 10px;
+  overflow: auto;
 }
 
 @keyframes openDrawer {
@@ -52,6 +54,6 @@
 }
 
 .drawer-background .drawer-container .drawer-content {
-  position: absolute;
-  top: 70px;
+  width: 100%;
+  margin-top: 70px;
 }
