--- a/src/lib/Modal/style.css
+++ b/src/lib/Modal/style.css
@@ -14,11 +14,11 @@
 .modal-background .modal-container {
   background-color: #f2f2f2;
   width: 30%;
-  height: 40%;
+  height: 20%;
   display: flex;
   flex-direction: column;
   position: absolute;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 16px rgba(29, 29, 29, 0.16);
   border-radius: 5px;
 }
 
@@ -56,15 +56,12 @@
   align-items: center;
   justify-content: center;
   position: relative;
-}
-
-.modal-background .modal-container .modal-header hr {
-  width: 100%;
-  margin: 10px 0px;
+  font-weight: bold;
+  font-size: 1.75rem;
 }
 
 .modal-background .modal-container .modal-header .modal-close-icon {
-  width: 30px;
+  width: 20px;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -99,5 +96,5 @@
 }
 
 .modal-background .modal-container .modal-buttons .modal-button-cancel {
-  background-color: #f44336;
+  background-color: #dd2525;
 }
