--- a/src/lib/Loading/style.css
+++ b/src/lib/Loading/style.css
@@ -1,4 +1,21 @@
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes grow {
+  from {
+    width: 10px;
+    height: 10px;
+  }
+  to {
+    transform: scale(1.5);
+  }
+}
+
 .loading-container {
+  background-color: rgba(0, 0, 0, 0.4);
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -16,54 +33,14 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  animation: spin 2s linear infinite;
 }
 
-.loading-1 {
-  width: 300px;
-  height: 300px;
+.loading-circle {
+  width: 20px;
+  height: 20px;
   position: absolute;
-  top: 0px;
-  left: 0px;
-  border-top: 5px solid #000;
+  border: 3px solid #fff;
   border-radius: 50%;
-  animation: spin-1 2s linear infinite;
-}
-
-.loading-2 {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  top: 50px;
-  left: 50px;
-  border-right: 5px solid #000;
-  border-radius: 50%;
-  animation: spin-2 2s linear infinite;
-}
-
-.loading-3 {
-  height: 100px;
-  width: 100px;
-  position: absolute;
-  top: 100px;
-  left: 100px;
-  border-right: 5px solid #000;
-  border-radius: 50%;
-  animation: spin-1 2s linear infinite;
-}
-
-.text {
-  font-size: medium;
-  font-weight: bold;
-}
-
-@keyframes spin-1 {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spin-2 {
-  to {
-    transform: rotate(-360deg);
-  }
+  animation: grow 2s linear infinite;
 }
