--- a/src/lib/Drawer/style.css
+++ b/src/lib/Drawer/style.css
@@ -2,7 +2,7 @@
   background-color: rgba(0, 0, 0, 0.4);
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 1000;
 }
