--- a/src/lib/Modal/style.css
+++ b/src/lib/Modal/style.css
@@ -2,7 +2,7 @@
   background-color: rgba(0, 0, 0, 0.4);
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   display: flex;
   align-items: center;
@@ -17,7 +17,7 @@
   height: 20%;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   box-shadow: 0px 4px 16px rgba(29, 29, 29, 0.16);
   border-radius: 5px;
 }
