--- a/src/lib/Tooltip/style.css
+++ b/src/lib/Tooltip/style.css
@@ -16,6 +16,7 @@
   color: #fff;
   position: absolute;
   top: -30px;
+  font-family: inherit;
   font-size: 0.9rem;
   border-radius: 10px;
   padding: 5px;
