--- a/src/lib/Tooltip/style.css
+++ b/src/lib/Tooltip/style.css
@@ -19,6 +19,7 @@
   font-family: inherit;
   font-size: 0.9rem;
   border-radius: 10px;
+  z-index: 100000;
   padding: 5px;
   animation: fade-in 1s;
 }
